
_____________________________________________________________________________________________________


CFDWARP CHANGELOG

_____________________________________________________________________________________________________


2019 JAN 07a
   * in LICENSE
     - updated year of copyright
   * in README
     - updated year of copyright
   * in src/control.c
     - updated year of copyright
   * in bin
     - added flat_plate_turbulent_unsteady.wrp
   * in cycle/share/cycle_share.h
     - added PRECON_LOCALEIGENVALUE2 (new preconditioner that works better for 2-equation turbulence
       models and nitrogen vibrational energy in non-equilibrium)
   * in cycle/share/cycle_share.c
     - in add_constants_to_codex(), added PRECON_LOCALEIGENVALUE2
   * in cycle/*/cycle.c
     - in runtime_actions_cycle_specific(), added PRECON_LOCALEIGENVALUE2
   * in model/share/fluid_share.c
     - in find_Gamma(), added PRECON_LOCALEIGENVALUE2


2018 DEC 22a
   * in src/control.c
     - renamed _Omega_DISTMPI_compatible to _Omega_DISTMPI_global
     - renamed _x_DISTMPI_compatible to _x_DISTMPI_global
     - added _x_DISTMPI_local()
     - in read_control_functions(), added calls to _x_DISTMPI_local
     - in readcontrol_actions(), added variables domain.* to codex after grid is generated
   * in bin/noh2D.wrp and bin/taylor_green_vortex.wrp and bin/taylor_green_vortex_2.wrp
     - changed control file so that the loops use domain.is, domain.ie, etc


2018 DEC 21a
   * in src/bdry.c
     - in read_bdry_actions() and find_link_direc(), added an extra optional parameter to the Link() 
       command (the direction of the stencil beyond the inner node) 
       -> not needed generally, avoid to use this unless you know what you are doing
   * in src/common.h
     - added the constants LINKDIMSGN_NONE and LINKDIMSGN_BASE
   * in bin
     - updated noh2D.wrp and cylinder_in_freestream.wrp


2018 DEC 12a
   * in bin
     - updated sod.wrp
     - updated sedov.wrp


2018 NOV 29b
   * in bin